--- a/DeckMaster/DeckMaster.csproj
+++ b/DeckMaster/DeckMaster.csproj
@@ -8,6 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\Content\img\BlackDeck.jpeg" />
+    <None Include="wwwroot\Content\img\CardSymbols.png" />
+    <None Include="wwwroot\Content\img\DeckMaster.png" />
+    <None Include="wwwroot\Content\img\DeckMasterGrey.png" />
+    <None Include="wwwroot\Content\img\DeckMasterW.png" />
+    <None Include="wwwroot\Content\img\DeckOfCards.png" />
+    <None Include="wwwroot\Content\img\FiveAces.jpg" />
+    <None Include="wwwroot\Content\img\Identity Framework with SQLite App Setup.docx" />
+    <None Include="wwwroot\Content\img\PayPal.png" />
+    <None Include="wwwroot\Content\img\reCAPTCHA.png" />
+    <None Include="wwwroot\Content\img\reCAPTCHA2.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.1" />
